--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        <img src="./assets/images/Favourite-websites.png" height="400"/>
        <hr/>
    
-        <a href="./public/about.html">ABOUT ME</a>
+        <a href="./public/about.html"><img src="./assets/images/mee.jpg" height="50"/><br>ABOUT ME</br></a>
         <a href="./public/contact.html">CONTACT ME</a>
        
     </body>
